# smart-eyes

./: .gitignore  .prettierignore  PROGRESS.md  README.md  SESSION-2026-03-23_00-37-31.md  SESSION-2026-03-24.md  package.json
.serena/: project.yml
backend/: main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: cameras.py  detections.py  settings.py  snapshots.py  status.py  streaming.py
backend/app/core/: config.py  security.py
backend/app/models/: database.py
backend/app/services/: detection.py  notifier.py  telegram.py  webrtc.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: PolygonCanvas.tsx  SplashScreen.tsx
frontend/src/lib/: api.ts  webrtc.ts  websocket.ts
frontend/src/pages/: Cameras.tsx  Dashboard.tsx  Detections.tsx  Layout.tsx  LiveView.tsx  Settings.tsx
frontend/src/stores/: cameraStore.ts  detectionStore.ts  settingsStore.ts
scripts/: com.smart-eyes.backend.plist  start-backend.sh
